--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./style.css">
+	<script defer src="./script.js"></script>
 </head>
 
 <body>
-
-
-
-
-	<script src="./script.js"></script>
+	<button id="btnPlus">+</button>
+	<button id="btnMinus">-</button>
+	<div id="divCount">
+		<span>Count of clicks: <span id="count"></span> </span>
+	</div>
+	<button  class="red">Red</button>
+	<button  class="green">Green</button>
+	<button  class="blue">Blue</button>
 </body>
 
 </html>
