--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
 </head>
 
 <body>
-	<button id="btnPlus">+</button>
+	<!-- <button id="btnPlus">+</button>
 	<button id="btnMinus">-</button>
 	<div id="divCount">
 		<span>Count of clicks: <span id="count"></span> </span>
 	</div>
 	<button  class="red">Red</button>
 	<button  class="green">Green</button>
-	<button  class="blue">Blue</button>
+	<button  class="blue">Blue</button> -->
+	<div class="click-container">Click me</div>
+	<!-- <div id="divCountOne">
+		<span>Count of clicks one: <span id="countOne"></span> </span>
+	</div>
+	<div id="divCountTwo">
+		<span>Count of clicks two: <span id="countTwo"></span> </span>
+	</div> -->
 </body>
 
 </html>
